Fixing spacing issues related to the nav layout andform submission

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,10 +26,13 @@ body {
  */
  .container {
   display: flex;
-  justify-content: start;
   text-align: center;
-  
   width: 90%;
   margin: auto;
   background-color: #f4f1ec;
+ }
+
+ .new-tweet {
+  display: flex;
+  width: 100%;
  }
