--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,7 +1,12 @@
 form {
   display: flex;
   flex-direction: column;
-  
+  width: 100%;
+}
+
+label {
+  display: flex;
+  justify-content: start;
 }
 
 .button-and-counter {
